# Falcon

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
cmake/: add_files.cmake
include/lib/: event.h  lib.h  preRunTasks.h  task.h  views.h
include/lib_gui/: window.h
include/lib_utils/: logger.h  utils.h
src/app/: CMakeLists.txt  main.cc
src/lib/: CMakeLists.txt  lib.cc  preRunTasks.cc  views.cc
src/lib_gui/: CMakeLists.txt  QtApplication.cc  QtApplication.h  window.cc
src/lib_utils/: CMakeLists.txt
utils/: CMakeLists.txt  fetchImgui.py
utils/fonts/: Font_Codicon.cpp  Font_fa.cpp  GenerateIconFontCppHeaders.py
